@@ -1,3 +1,7 @@
+2010-06-03
+
+	* src/quick_search.c: suppress filter debug output.
+
 2010-06-02
 
 	* libsylph/filter.c: added debug log for filter.
